Entry head text align

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     </a>
                   </div>
                   <div class="col-xs-12 col-sm-12 col-md-6 col-lg-7 col-md-pull-6 col-lg-pull-5">
-                    <h4 class="media-heading text-left">Media heading</h4>
+                    <h4 class="media-heading text-left encabezado">¡Nuevo sencillo de Ariana Grande!</h4>
                     <p class="media-heading text-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                   </div>
                  </div>
@@ -83,11 +83,11 @@
                  <div class="row cuerpo">
                    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-5">
                      <a href="#">
-                       <img class="media-object" src="img/ariana_xs.png" alt="Ariana Grande Photo">
+                       <img class="media-object" src="img/molotov_xs.png" alt="Ariana Grande Photo">
                      </a>
                    </div>
                    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-7">
-                     <h4 class="media-heading text-left">Media heading</h4>
+                     <h4 class="media-heading text-left encabezado">Molotov celebra su aniversario</h4>
                      <p class="media-heading text-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                    </div>
                   </div>
@@ -115,16 +115,16 @@
                   </div><!-- /search-input -->
 
                     <div class="list-group media-center">
-                      <button type="button" class="list-group-item">Cras justo odio</button>
-                      <button type="button" class="list-group-item">Dapibus ac facilisis in</button>
-                      <button type="button" class="list-group-item">Morbi leo risus</button>
-                      <button type="button" class="list-group-item">Porta ac consectetur ac</button>
-                      <button type="button" class="list-group-item">Vestibulum at eros</button>
-                      <button type="button" class="list-group-item">Cras justo odio</button>
-                      <button type="button" class="list-group-item">Dapibus ac facilisis in</button>
-                      <button type="button" class="list-group-item">Morbi leo risus</button>
-                      <button type="button" class="list-group-item">Porta ac consectetur ac</button>
-                      <button type="button" class="list-group-item">Vestibulum at eros</button>
+                      <button type="button" class="list-group-item">Alternativo</button>
+                      <button type="button" class="list-group-item">Blues</button>
+                      <button type="button" class="list-group-item">Rock</button>
+                      <button type="button" class="list-group-item">R & B</button>
+                      <button type="button" class="list-group-item">Jazz</button>
+                      <button type="button" class="list-group-item">Funk</button>
+                      <button type="button" class="list-group-item">Tropical</button>
+                      <button type="button" class="list-group-item">Indie</button>
+                      <button type="button" class="list-group-item">Folk</button>
+                      <button type="button" class="list-group-item">Metal</button>
                     </div><!-- /search-button-group -->
 
                 </div><!-- /.col-lg-6 -->
